# GameEngineArtfx_Cube

./: CMakeLists.txt  README.md
.github/workflows/: CMAKE.yml
GameEngine/Color/: GE_Color.cpp  GE_Color.hpp
GameEngine/Common/: Shader.hpp  shader.cpp
GameEngine/Component/: GE_Component.cpp  GE_Component.hpp
GameEngine/Component/Custom/Quad/: GE_Quad.cpp  GE_Quad.hpp
GameEngine/Component/Custom/RotateCube/: GE_RotateCube.cpp  GE_RotateCube.hpp
GameEngine/Game/: GE_Game.cpp  GE_Game.hpp
GameEngine/Input/: GE_InputManager.cpp  GE_InputManager.hpp
GameEngine/Renderer/: ge_renderer.cpp  ge_renderer.hpp
GameEngine/Source/: CMakeLists.txt  Main.cpp
GameEngine/Time/: GE_Time.cpp  GE_Time.hpp
GameEngine/Transform/: ge_transform.cpp  ge_transform.hpp
GameEngine/Utils/: Utils.cpp  Utils.hpp
GameEngine/Window/: GE_Window.cpp  GE_Window.hpp
Resources/Shaders/: TextureFragmentShader.fragmentshader
